# pluppkalender

./: .gitignore  LICENSE  README.md  pyproject.toml
saved_model/: fingerprint.pb  saved_model.pb
saved_model/variables/: variables.index
src/pluppkalender/: pluppkalender.py
